--- a/newsnew.html
+++ b/newsnew.html
@@ -1,184 +1,396 @@
 <!DOCTYPE html>
-<html lang="he" dir="rtl">
+<html lang="he">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>צ'אט Sbh</title>
-  <style>
-    body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: linear-gradient(135deg, #667eea, #764ba2);
-      margin: 0;
-      display: flex;
-      flex-direction: column;
-      height: 100vh;
-      direction: rtl;
-      color: #333;
-    }
-    #chat {
-      flex-grow: 1;
-      overflow-y: auto;
-      padding: 20px;
-      background: #fff;
-      border-radius: 12px 12px 0 0;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.15);
-      margin: 20px;
-      font-size: 1.1rem;
-      line-height: 1.4;
-    }
-    .message {
-      margin: 12px 0;
-      max-width: 70%;
-      padding: 12px 16px;
-      border-radius: 18px;
-      clear: both;
-      word-wrap: break-word;
-      box-shadow: 0 1px 4px rgba(0,0,0,0.1);
-      transition: background-color 0.3s;
-    }
-    .user {
-      background: #a8d0ff;
-      float: left;
-      color: #1a202c;
-      text-align: left;
-    }
-    .bot {
-      background: #c6f6d5;
-      float: right;
-      color: #22543d;
-      text-align: right;
-    }
-    #inputArea {
-      display: flex;
-      padding: 15px 20px;
-      background: #fff;
-      box-shadow: 0 -4px 12px rgba(0,0,0,0.15);
-      border-radius: 0 0 12px 12px;
-      margin: 0 20px 20px 20px;
-    }
-    #inputText {
-      flex-grow: 1;
-      padding: 14px 18px;
-      font-size: 1.1rem;
-      border: 2px solid #764ba2;
-      border-radius: 25px;
-      outline: none;
-      transition: border-color 0.3s;
-    }
-    #inputText:focus {
-      border-color: #667eea;
-      box-shadow: 0 0 6px #667eea;
-    }
-    #sendBtn {
-      padding: 0 24px;
-      margin-right: 12px;
-      font-size: 1.1rem;
-      cursor: pointer;
-      border: none;
-      background: #764ba2;
-      color: white;
-      border-radius: 25px;
-      transition: background-color 0.3s;
-      font-weight: bold;
-      user-select: none;
-    }
-    #sendBtn:hover {
-      background: #5a3680;
-    }
-    footer {
-      text-align: center;
-      padding: 12px 0;
-      color: #ddd;
-      font-size: 0.9rem;
-      user-select: none;
-      font-weight: 600;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      letter-spacing: 0.05em;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>צ'אט Sbh</title>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/themes/prism-dark.min.css" rel="stylesheet"/>
+    <link rel="icon" href="https://img.lovepik.com/element/45004/6135.png_860.png" type="image/png"> <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+            background: linear-gradient(135deg, #1a1a2e 0%, #16213e 100%);
+            color: #e0e0e0;
+            min-height: 100vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            overflow: hidden;
+            flex-direction: column; /* Added for footer */
+        }
+
+        .chat-container {
+            width: 100%;
+            max-width: 1200px;
+            height: 90vh;
+            background: rgba(255, 255, 255, 0.05);
+            backdrop-filter: blur(10px);
+            border-radius: 20px;
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5);
+            display: flex;
+            flex-direction: column;
+            overflow: hidden;
+        }
+
+        .chat-header {
+            padding: 20px;
+            background: rgba(0, 0, 0, 0.2);
+            text-align: center;
+            border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+        }
+
+        .chat-header h1 {
+            font-size: 24px;
+            color: #00ddeb;
+            text-shadow: 0 0 10px rgba(0, 221, 235, 0.5);
+        }
+
+        .chat-box {
+            flex: 1;
+            padding: 20px;
+            overflow-y: auto;
+            scroll-behavior: smooth;
+        }
+
+        .chat-box::-webkit-scrollbar {
+            width: 8px;
+        }
+
+        .chat-box::-webkit-scrollbar-thumb {
+            background: #00ddeb;
+            border-radius: 4px;
+        }
+
+        .message {
+            margin: 15px 0;
+            padding: 15px;
+            border-radius: 15px;
+            max-width: 80%;
+            animation: slideIn 0.3s ease-out;
+            backdrop-filter: blur(5px);
+        }
+
+        .user-message {
+            background: linear-gradient(90deg, #00ddeb, #007bff);
+            color: white;
+            margin-left: auto;
+            box-shadow: 0 5px 15px rgba(0, 125, 255, 0.3);
+        }
+
+        .bot-message {
+            background: rgba(255, 255, 255, 0.1);
+            color: #e0e0e0;
+            margin-right: auto;
+            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+        }
+
+        .bot-message img, .bot-message video {
+            max-width: 100%;
+            border-radius: 10px;
+            margin-top: 10px;
+        }
+
+        .code-container {
+            background: #1e1e2e;
+            border: 1px solid #00ddeb;
+            border-radius: 10px;
+            padding: 15px;
+            position: relative;
+            margin-top: 10px;
+        }
+
+        .code-block {
+            font-family: 'Courier New', monospace;
+            white-space: pre-wrap;
+            margin: 0;
+            max-height: 300px;
+            overflow-y: auto;
+        }
+
+        .copy-button {
+            position: absolute;
+            top: 10px;
+            left: 10px;
+            padding: 5px 15px;
+            background: #00ddeb;
+            color: #1a1a2e;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background 0.3s;
+        }
+
+        .copy-button:hover {
+            background: #007bff;
+            color: white;
+        }
+
+        .language-label {
+            font-size: 12px;
+            color: #00ddeb;
+            margin-top: 5px;
+            text-align: left;
+            opacity: 0.8;
+        }
+
+        .input-container {
+            padding: 20px;
+            background: rgba(0, 0, 0, 0.2);
+            border-top: 1px solid rgba(255, 255, 255, 0.1);
+            display: flex;
+            align-items: center;
+        }
+
+        #user-input {
+            flex: 1;
+            padding: 15px;
+            border: none;
+            border-radius: 25px;
+            background: rgba(255, 255, 255, 0.1);
+            color: #e0e0e0;
+            font-size: 16px;
+            margin-left: 10px;
+            transition: background 0.3s;
+        }
+
+        #user-input:focus {
+            outline: none;
+            background: rgba(255, 255, 255, 0.2);
+        }
+
+        #send-button {
+            padding: 15px 30px;
+            background: #00ddeb;
+            color: #1a1a2e;
+            border: none;
+            border-radius: 25px;
+            cursor: pointer;
+            font-size: 16px;
+            transition: background 0.3s;
+        }
+
+        #send-button:hover {
+            background: #007bff;
+            color: white;
+        }
+
+        .typing {
+            display: flex;
+            align-items: center;
+        }
+
+        .typing::after {
+            content: "...";
+            display: inline-block;
+            animation: typing 1s infinite;
+        }
+
+        .footer {
+            margin-top: 20px;
+            color: #a0a0a0;
+            font-size: 14px;
+        }
+
+        @keyframes typing {
+            0% {
+                content: ".";
+            }
+            33% {
+                content: "..";
+            }
+            66% {
+                content: "...";
+            }
+        }
+
+        @keyframes slideIn {
+            from {
+                opacity: 0;
+                transform: translateY(20px);
+            }
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+
+        @media (max-width: 600px) {
+            .chat-container {
+                height: 100vh;
+                border-radius: 0;
+            }
+
+            .chat-header h1 {
+                font-size: 20px;
+            }
+
+            #user-input, #send-button {
+                font-size: 14px;
+                padding: 12px;
+            }
+        }
+    </style>
 </head>
 <body>
-
-  <div id="chat">
-    <div class="message bot">ברוך הבא לצ'אט Sbh! איך אפשר לעזור?</div>
-  </div>
-
-  <div id="inputArea">
-    <input type="text" id="inputText" placeholder="כתוב כאן..." autocomplete="off" />
-    <button id="sendBtn">שלח</button>
-  </div>
-
-  <footer>
-    כל הזכויות שמורות לאלי כ.
-  </footer>
-
+<div class="chat-container">
+    <div class="chat-header">
+        <h1>צ'אט Sbh</h1>
+    </div>
+    <div class="chat-box" id="chat-box"></div>
+    <div class="input-container">
+        <input type="text" id="user-input" placeholder="שאל כל דבר...">
+        <button id="send-button">שלח</button>
+    </div>
+</div>
+<div class="footer">
+    © כל הזכויות שמורות לאלי כ.
+</div>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/prism.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/components/prism-python.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/components/prism-javascript.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/components/prism-html.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/components/prism-css.min.js"></script>
 <script>
-  const chatDiv = document.getElementById('chat');
-  const inputText = document.getElementById('inputText');
-  const sendBtn = document.getElementById('sendBtn');
+    const API_KEY = "AIzaSyAfjeKBpXDWB8PTHdgmh870dy-n-hV-q6c";
+    const API_URL = "https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash:generateContent";
+    const chatBox = document.getElementById("chat-box");
+    const userInput = document.getElementById("user-input");
+    const sendButton = document.getElementById("send-button");
 
-  const apiKey = "AIzaSyBXd993D827L4-VFtad7bnI7o_Kxq-_yqk";
+    sendButton.addEventListener("click", sendMessage);
+    userInput.addEventListener("keypress", (e) => {
+        if (e.key === "Enter") sendMessage();
+    });
 
-  function addMessage(text, sender) {
-    const msgDiv = document.createElement('div');
-    msgDiv.classList.add('message', sender);
-    msgDiv.textContent = text;
-    chatDiv.appendChild(msgDiv);
-    chatDiv.scrollTop = chatDiv.scrollHeight;
-  }
+    function addMessage(content, isUser = false, isCode = false, language = "") {
+        const messageDiv = document.createElement("div");
+        messageDiv.className = `message ${isUser ? "user-message" : "bot-message"}`;
 
-  async function sendMessage(promptText) {
-    addMessage(promptText, 'user');
-
-    const lower = promptText.toLowerCase();
-    if (lower.includes('מי בנה אותך') || lower.includes('מי תכנת אותך') || lower.includes('מי יצר אותך')) {
-      addMessage('אני נבניתי על ידי אלי כהן.', 'bot');
-      return;
-    }
-
-    if (
-      lower.includes('מה השם שלך') ||
-      lower.includes('מי אתה') ||
-      lower.includes('מי את') ||
-      lower.includes('מי אתה?') ||
-      lower.includes('מי את?')
-    ) {
-      addMessage("קוראים לי צ'אט Sbh.", 'bot');
-      return;
-    }
-
-    try {
-      const response = await fetch(
-        `https://generativelanguage.googleapis.com/v1beta/models/gemini-pro:generateContent?key=${apiKey}`,
-        {
-          method: "POST",
-          headers: { "Content-Type": "application/json" },
-          body: JSON.stringify({
-            contents: [
-              {
-                parts: [{ text: promptText }],
-                role: "user"
-              }
-            ]
-          })
+        if (isCode) {
+            messageDiv.innerHTML = `
+                <div class="code-container">
+                    <button class="copy-button" onclick="copyCode(this)">העתק</button>
+                    <pre class="code-block language-${language.toLowerCase()}"><code>${content}</code></pre>
+                    <div class="language-label">${language}</div>
+                </div>`;
+        } else {
+            messageDiv.innerHTML = content;
         }
-      );
 
-      const data = await response.json();
-      console.log("🔎 תשובת Gemini:", data);
+        chatBox.appendChild(messageDiv);
+        chatBox.scrollTop = chatBox.scrollHeight;
 
-      const aiResponse =
-        data.candidates?.[0]?.content?.parts?.[0]?.text ||
-        data.candidates?.[0]?.content?.parts?.[0] ||
-        data.candidates?.[0]?.content?.text ||
-        "❌ לא התקבלה תשובה מה-AI";
+        if (isCode) Prism.highlightAll();
+    }
 
-      addMessage(aiResponse, 'bot');
+    function copyCode(button) {
+        const code = button.nextElementSibling.querySelector("code").textContent;
+        navigator.clipboard.writeText(code).then(() => {
+            button.textContent = "הועתק!";
+            setTimeout(() => button.textContent = "העתק", 2000);
+        });
+    }
 
-    } catch (error) {
-      console.error(error);
-      addMessage("❗ אירעה שגיאה בעת בקשת התשובה מהשרת.", 'bot')
-    </script>
+    async function sendMessage() {
+        const message = userInput.value.trim();
+        if (!message) return;
+
+        addMessage(message, true);
+        userInput.value = "";
+
+        const lowerMessage = message.toLowerCase();
+
+        // בדיקה לשאלות על זהות (שם)
+        if (lowerMessage.includes("מה שמך") || lowerMessage.includes("מי אתה") || lowerMessage.includes("איך קוראים לך")) {
+            addMessage("קוראים לי צ'אט Sbh!", false);
+            return;
+        }
+
+        // בדיקה לשאלות על היוצר
+        if (lowerMessage.includes("מי יצר") || lowerMessage.includes("מי תכנת") || lowerMessage.includes("מי בנה") || lowerMessage.includes("מי עשה")) {
+            addMessage("אני נוצרתי על ידי אלי כהן!", false);
+            return;
+        }
+
+        // בדיקה לבקשות הקשורות לסקריפטים
+        if (lowerMessage.includes("סקריפט") || lowerMessage.includes("קוד") || lowerMessage.includes("כתוב לי") || lowerMessage.includes("תעשה לי")) {
+            addMessage("כרגע איני יודע לעשות את זה", false);
+            return;
+        }
+
+        // הוספת הודעת "מקליד"
+        const typingDiv = document.createElement("div");
+        typingDiv.className = "message bot-message typing";
+        typingDiv.textContent = "מקליד";
+        chatBox.appendChild(typingDiv);
+        chatBox.scrollTop = chatBox.scrollHeight;
+
+        try {
+            const response = await fetch(`${API_URL}?key=${API_KEY}`, {
+                method: "POST",
+                headers: {
+                    "Content-Type": "application/json"
+                },
+                body: JSON.stringify({contents: [{parts: [{text: message}]}]})
+            });
+
+            const data = await response.json();
+            chatBox.removeChild(typingDiv);
+
+            if (data.candidates && data.candidates[0].content) {
+                let botResponse = data.candidates[0].content.parts[0].text;
+
+                // החלפת תגובות שמזכירות גוגל
+                botResponse = botResponse.replace(/אני מודל שפה גדול, שאומן על ידי גוגל|אני Gemini, נוצרתי על ידי גוגל|אני בינה מלאכותית שאומנה על ידי גוגל/gi, "אני נוצרתי על ידי אלי כהן!");
+
+
+                // זיהוי קטעי קוד עם Regex
+                const codeRegex = /```(\w+)?\n([\s\S]*?)```/g;
+                let codeMatches = [];
+                let match;
+                while ((match = codeRegex.exec(botResponse)) !== null) {
+                    codeMatches.push({language: match[1] || "Text", code: match[2].trim()});
+                }
+
+                // הצגת קוד בתיבה אם קיים
+                if (codeMatches.length > 0) {
+                    codeMatches.forEach(({language, code}) => {
+                        let lang = language.toLowerCase();
+                        if (lang.includes("python")) lang = "Python";
+                        else if (lang.includes("javascript")) lang = "JavaScript";
+                        else if (lang.includes("html")) lang = "HTML";
+                        else if (lang.includes("css")) lang = "CSS";
+                        else lang = "Text";
+                        addMessage(code, false, true, lang);
+                    });
+                    // הצגת טקסט שאינו קוד
+                    let nonCodeText = botResponse.replace(codeRegex, "").trim();
+                    if (nonCodeText) addMessage(nonCodeText, false);
+
+                } else {
+                    // הצגת תגובה ללא קוד
+                    if (lowerMessage.includes("תמונה") || lowerMessage.includes("צייר")) {
+                        botResponse += '<br><img src="https://via.placeholder.com/300" alt="תמונה מדומה">';
+                    } else if (lowerMessage.includes("סרטון") || lowerMessage.includes("וידאו")) {
+                        botResponse += '<br><video controls><source src="https://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4">הדפדפן לא תומך בסרטונים.</video>';
+                    }
+                    addMessage(botResponse, false);
+                }
+            } else {
+                addMessage("שגיאה: לא ניתן לקבל תגובה מה-API", false);
+            }
+        } catch (error) {
+            chatBox.removeChild(typingDiv);
+            addMessage("שגיאה: לא ניתן להתחבר ל-API", false);
+            console.error(error);
+        }
+    }
+</script>
 </body>
 </html>
 
