--- a/ghl.html
+++ b/ghl.html
@@ -51,7 +51,7 @@
 
             // !!! חשוב !!!
             // יש להחליף את הכתובת הזו בכתובת ה-Webhook שתקבל מ-Zapier בשלב 1 של המדריך
-            const zapierWebhookUrl = 'YOUR_ZAPIER_WEBHOOK_URL_HERE'; 
+            const zapierWebhookUrl = 'https://hooks.zapier.com/hooks/catch/20667340/uo5s3sp/'; 
 
             fetch(zapierWebhookUrl, {
                 method: 'POST',
