--- a/מגזיןו'1.html
+++ b/מגזיןו'1.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>מגזין ו'1</title>
-  <link rel="icon" href="https://photos.fife.usercontent.google.com/pw/AP1GczMtC2r-g-PpgEIplKWwoQKtscRb61_SGsyhoRVhvuKijYBrBXlKAHKI=w391-h247-s-no-gm?authuser=1" />
+  <!-- אייקון של האתר (favicon) -->
+  <link rel="icon" type="image/png" href="https://photos.fife.usercontent.google.com/pw/AP1GczMtC2r-g-PpgEIplKWwoQKtscRb61_SGsyhoRVhvuKijYBrBXlKAHKI=w391-h247-s-no-gm?authuser=1" />
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Assistant:wght@400;700&display=swap');
 
@@ -21,6 +22,7 @@
       padding: 50px 20px 20px;
     }
 
+    /* הלוגו באתר */
     header img {
       width: 120px;
       height: auto;
@@ -35,7 +37,6 @@
       color: #0d47a1;
     }
 
-    /* אזור תוכן לקריאה בלבד */
     .content-box {
       background: white;
       max-width: 800px;
@@ -110,3 +111,4 @@
   </footer>
 </body>
 </html>
+
