--- a/מגזיןו'1.html
+++ b/מגזיןו'1.html
@@ -107,7 +107,7 @@
   </div>
 
   <footer>
-    © 2025 מגזין ו'1 | כל הזכויות שמורות
+     כל הזכויות שמורות לאלי כהן ©
   </footer>
 </body>
 </html>
