--- a/מגזיןו'1.html
+++ b/מגזיןו'1.html
@@ -91,13 +91,11 @@
   </header>
 
   <div class="content-box" aria-label="אזור תוכן לכתבות וטקסטים">
-    כאן תוכלו לכתוב את הטקסט או הכתבות שלכם ישירות בקוד ה-HTML,
-    בתוך האלמנט הזה. לדוגמה:
+    בקרוב
+    <br>
+    <br>
 
-    <br><br>
-
-    זהו מגזין ו'1 - הבית לתוכן איכותי ועדכונים מעניינים.<br>
-    נשמח להביא לכם כתבות, טיפים וסיפורים שישאירו אתכם מעודכנים.
+ האתר יפתח <br>
   </div>
 
   <div class="button-container">
