--- a/מגזיןו'1.html
+++ b/מגזיןו'1.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>מגזין ו'1</title>
   <!-- אייקון של האתר (favicon) -->
-  <link rel="icon" type="image/png" href="https://photos.fife.usercontent.google.com/pw/AP1GczMtC2r-g-PpgEIplKWwoQKtscRb61_SGsyhoRVhvuKijYBrBXlKAHKI=w391-h247-s-no-gm?authuser=1" />
+    <link rel="icon" href="https://photos.fife.usercontent.google.com/pw/AP1GczMtC2r-g-PpgEIplKWwoQKtscRb61_SGsyhoRVhvuKijYBrBXlKAHKI=w391-h247-s-no-gm?authuser=1" type="image/png">
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Assistant:wght@400;700&display=swap');
 
