--- a/מגזיןו'1.html
+++ b/מגזיןו'1.html
@@ -86,8 +86,7 @@
 </head>
 <body>
   <header>
-    <img src="https://photos.fife.usercontent.google.com/pw/AP1GczMtC2r-g-PpgEIplKWwoQKtscRb61_SGsyhoRVhvuKijYBrBXlKAHKI=w391-h247-s-no-gm?authuser=1" alt="לוגו מגזין ו'1">
-    <h1>מגזין ו'1</h1>
+    <h1>האתר של מגזין ו'1</h1>
   </header>
 
   <div class="content-box" aria-label="אזור תוכן לכתבות וטקסטים">
